--- a/SkEditor/SkEditor.csproj
+++ b/SkEditor/SkEditor.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <OutputType>WinExe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <OutputType Condition="'$(TargetFramework)' == 'net8.0'">WinExe</OutputType>
+        <OutputType Condition="'$(TargetFramework)' == 'net8.0-android'">Exe</OutputType>
+        <TargetFrameworks>net8.0;net8.0-android</TargetFrameworks>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
@@ -59,7 +60,8 @@
         <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.3.0"/>
         <PackageReference Include="Avalonia" Version="11.3.0" />
         <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5"/>
-        <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
+        <PackageReference Condition="'$(TargetFramework)' == 'net8.0'" Include="Avalonia.Desktop" Version="11.3.0" />
+        <PackageReference Condition="'$(TargetFramework)' == 'net8.0-android'" Include="Avalonia.Android" Version="11.3.0" />
         <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.3.0" />
         <PackageReference Include="Avalonia.Svg.Skia" Version="11.3.0" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
@@ -70,7 +72,7 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.0" />
         <PackageReference Condition="'$(Configuration)' == 'Release'" Include="Avalonia.Controls.DataGrid" Version="11.3.0"/>
         <PackageReference Condition="'$(Configuration)' == 'Release'" Include="Avalonia.Controls.ColorPicker" Version="11.3.0"/>
-        <PackageReference Include="DiscordRichPresence" Version="1.3.0.28" />
+        <PackageReference Condition="'$(TargetFramework)' == 'net8.0'" Include="DiscordRichPresence" Version="1.3.0.28" />
         <PackageReference Include="FluentIcons.Avalonia.Fluent" Version="1.1.303" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="NuGet.Protocol" Version="6.14.0" />
