--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
+    - name: Clear NuGet Cache
+      run: dotnet nuget locals all --clear
+
     - name: Install Android Job Workload
       run: dotnet workload install android
 
